VERSION: 0.0.4

Release notes 0.0.4
- README update.
- Insert next/previous ID check into the photo show views.

Release notes 0.0.3
- README update.
- Introduction of new connect() method allowing the Picasa web service connection to be reset during runtime.
- Introduction of new reset() method allowing the Picasa web service to revert back to the default Config.groovy connection details during runtime.

Release notes 0.0.2
- Introduction of further documentation (README / CHANGES)
- Internationalised the Photo and Album views
- Small tweak to the Picasa Service and Album / Photo controllers

Initial release: 0.0.1
