@@ -39,6 +39,7 @@ uk.co.anthonycampbell.grails.plugins.picasa.Album.nextPhotoId.label=Next Photo I
 uk.co.anthonycampbell.grails.plugins.picasa.Album.photoCount.label=Photo Count
 uk.co.anthonycampbell.grails.plugins.picasa.Album.isPublic.label=Is Public
 uk.co.anthonycampbell.grails.plugins.picasa.Album.dateCreated.label=Date Created
+uk.co.anthonycampbell.grails.plugins.picasa.Album.tags.label=Tags
 
 # Photo specific
 uk.co.anthonycampbell.grails.plugins.picasa.Photo.photoId.label=Photo ID
@@ -66,5 +67,5 @@ uk.co.anthonycampbell.grails.plugins.picasa.Photo.height.blank=Photo height must
 uk.co.anthonycampbell.grails.plugins.picasa.Photo.previousPhotoId.label=Previous Photo ID
 uk.co.anthonycampbell.grails.plugins.picasa.Photo.nextPhotoId.label=Next Photo ID
 uk.co.anthonycampbell.grails.plugins.picasa.Photo.isPublic.label=Is Public
-uk.co.anthonycampbell.grails.plugins.picasa.Photo.tags.label=Tags
 uk.co.anthonycampbell.grails.plugins.picasa.Photo.dateCreated.label=Date Created
+uk.co.anthonycampbell.grails.plugins.picasa.Photo.tags.label=Tags
