@@ -64,22 +64,22 @@
 								</tr>
 
 								<tr class="prop">
+									<td valign="top" class="name"><g:message code="uk.co.anthonycampbell.grails.plugins.picasa.Photo.dateCreated.label" default="Date Created" /></td>
+
+									<td valign="top" class="value"><g:formatDate date="${photoInstance?.dateCreated}" /></td>
+
+								</tr>
+
+								<tr class="prop">
 									<td valign="top" class="name"><g:message code="uk.co.anthonycampbell.grails.plugins.picasa.Photo.tags.label" default="Tags" /></td>
 
 									<td valign="top" style="text-align: left;" class="value">
 										<ul>
 										<g:each in="${photoInstance.tags}" var="t">
-											<li><g:link controller="tag" action="show" id="${t.id}">${t?.encodeAsHTML()}</g:link></li>
+											<li><g:link controller="tag" action="show" id="${t.keyword}">${t?.keyword}</g:link></li>
 										</g:each>
 										</ul>
 									</td>
-
-								</tr>
-
-								<tr class="prop">
-									<td valign="top" class="name"><g:message code="uk.co.anthonycampbell.grails.plugins.picasa.Photo.dateCreated.label" default="Date Created" /></td>
-
-									<td valign="top" class="value"><g:formatDate date="${photoInstance?.dateCreated}" /></td>
 
 								</tr>
 
