@@ -166,3 +166,13 @@ th.desc a {
     padding-bottom: 5px;
     padding-left: 35px;
 }
+
+/**
+ * Custom DIVs
+ */
+#listTag {
+    border: 1px solid #CCCCCC;
+    font-size: 0.8em;
+    padding: 10px;
+    margin-top: 1.5em;
+}
